fixed weird overflow-related visual bug
Changes to be committed:
	modified:   src/app/globals.css
	modified:   src/app/layout.js
	modified:   src/app/page.jsx
	modified:   src/components/Waves.jsx
	modified:   src/components/footer/Footer.jsx
	modified:   src/components/home/hero/Day.jsx
	modified:   src/components/home/hero/Year.jsx
	modified:   src/components/home/mobile/Calgary-Mobile.jsx
	modified:   src/components/home/mobile/Hero-Mobile.jsx
	modified:   src/components/nav/Navbar.jsx

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -62,7 +62,6 @@ body {
     width: 100%;
     height: 100%;
     padding: 0;
-    position: relative;
     overflow-x: hidden;
 }
 
